--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,10 @@
         padding: 0;
         font-size: 13px;
         font-family: Arial, Helvetica, sans-serif;
+        overflow-x: hidden;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
     }
     a {
         text-decoration: none;
@@ -16,6 +20,9 @@
     header nav {
         display: flex;
         justify-content: flex-end;
+        position: fixed;
+        top: 0;
+        right: 0;
     }
     header nav .nav-right-section {
         width: 250px;
@@ -48,6 +55,7 @@
     main {
         margin-top: 150px;
         text-align: center;
+        flex-grow: 1;
     }
     main .main-logo {
         width: 100%;
@@ -130,11 +138,12 @@
     footer {
         width: 100%;
         height: 50px;
-        position: absolute;
-        bottom: 0;
+        position: relative;
+        bottom: 0;  
         display: grid;
         grid-template-columns: 1fr 1fr;
         align-items: center;
+        margin-top: 60px;
         font-size: 13px;
         background-color: #f2f2f2;
         border-top: 1px solid #e4e4e4;
@@ -152,16 +161,17 @@
         justify-self: right;
     }
     footer ul li a {
-        margin: 10px;
-        color: #5f6368;
+    margin: 10px;
+    color: #5f6368;
     }
     
-    @media screen and (max-width: 425px) {
-        main {
-            margin-top: 100px;
+    @media screen and (min-width: 579px) {
+        footer ul li a {
+            margin: 4px;
         }
+    }
+    @media screen and (max-width: 428px) {
         main .main-input {
-            justify-content: center;
             width: 80%;
             margin: 0 auto;
         }
